<resources>
    <string name="app_name">Auto Click</string>
    <string name="accessibility_service_name">Auto Click</string>
    <string name="accessibility_service_id">com.sieuthi.click.sound.prank</string>
    <string name="accessibility_service_description">Ứng dụng yêu cầu các quyền sau:\nNhận hoạt động của bạn: Yêu cầu bắt buộc đối với tất cả dịch vụ trợ năng.\nMô phỏng thao tác chạm: Thực hiện các thao tác chạm tự động. Hãy yên tâm rằng ứng dụng này không thu thập thông tin cá nhân. Cảm ơn đã ủng hộ, chúc bạn sử dụng vui vẻ.</string>
    <string name="text_advanced_settings">Cài đặt nâng cao</string>
    <string name="text_game_mode">Chế độ chơi</string>
    <string name="tet_game_mode_desc">Chỉ hiển thị nút bắt đầu tạm dừng</string>
    <string name="text_folded_menu">Menu gấp</string>
    <string name="automatic_menu_collapse_at_runtime">Tự động thu gọn menu khi chạy</string>
    <string name="text_menu_display">Hiển thị thanh menu</string>
    <string name="text_display_desc">Hiển thị thanh menu theo chiều ngang</string>
    <string name="text_minimise_menu">Thu nhỏ Menu</string>
    <string name="text_minmise_desc">Ẩn cửa sổ nổi vào cạnh màn hình</string>
    <string name="text_to_avoid_game_detection">Tránh phát hiện gian lận</string>
    <string name="text_str_random_interval">Khoảng thời gian ngẫu nhiên</string>
    <string name="text_str_random_position">Vị trí ngẫu nhiên</string>
    <string name="text_edit">Chỉnh sửa</string>
    <string name="text_upgrade_to_vip">Nâng cấp lên VIP</string>
    <string name="text_restore_defaults">Khôi phục mặc định</string>
    <string name="text_restore_defaults_desc">Nhấn để khôi phục bản gốc</string>
    <string name="text_hour">h</string>
    <string name="text_stop_after">ĐK dừng cấu hình</string>
    <string name="text_never">Vòng lặp vô tận</string>
    <string name="text_min">m</string>
    <string name="text_second">s</string>
    <string name="text_delay">Trì hoãn</string>
    <string name="text_delay_desc">Thời gian trì hoãn</string>
    <string name="text_delay_desc_click_of_next">Thời gian giữa lần nhấp tiếp theo</string>
    <string name="text_number_of_times">Lượt vòng lặp</string>
    <string name="text_anti_detection">Cài đặt chống phát hiện</string>
    <string name="text_done">Hoàn tất</string>
    <string name="text_click_intervals_tips">Khoảng thời gian nhấp dưới 40 mili giây có thể khiến thiết bị của bạn bị kẹt hoặc thoát bất thường.</string>
    <string name="text_save_this_config">Sửa tên cấu hình</string>
    <string name="text_save">Lưu</string>
    <string name="text_timing_start">Timing start</string>
    <string name="text_timing_start_desc">Start the config when:</string>
    <string name="text_let_s_start">KHỞI ĐỘNG</string>
    <string name="text_let_s_stop">DỪNG</string>
    <string name="text_set_time">Set running time</string>
    <string name="text_cancel">Huỷ</string>
    <string name="text_start_a_new">Tạo cấu hình mới</string>
    <string name="text_loading_config">Nhập cấu hình</string>
    <string name="empty_desc">Không có cấu hình</string>
    <string name="text_select_a_config">Hãy chọn 1 cấu hình</string>
    <string name="text_select_app">Chọn khởi động ứng dụng</string>
    <string name="text_clicker_single_mode">Chế độ một điểm</string>
    <string name="text_clicker_single_desc">Nhấp chuột lặp lại ở cùng một vị trí trong những khoảng thời gian được chỉ định</string>
    <string name="text_clicker_multi_mode">Chế độ đa điểm</string>
    <string name="text_clicker_multi_desc">Thiết lập một loạt các nhấp chuột hoặc vuốt ở nhiều vị trí</string>
    <string name="text_clicker_synchronization_mode">Chế độ đồng bộ</string>
    <string name="text_clicker_synchronization_desc">Đặt hành động nhấp ở nhiều vị trí sẽ đồng bộ hóa các nhấp chuột</string>
    <string name="text_clicker_record_mode">Chế độ ghi</string>
    <string name="text_clicker_record_mode_desc">Thực hiện các bước bạn muốn thực hiện trực tiếp trên màn hình và hành động mục tiêu sẽ được thêm tự động.</string>
    <string name="text_clicker_long_mode">Chế độ nhấn và giữ</string>
    <string name="text_clicker_long_desc">Đặt một hành động ở vị trí đã chỉ định, nó sẽ luôn thực hiện một thao tác nhấn và giữ</string>
    <string name="text_clicker_edge_mode">Chế độ cạnh</string>
    <string name="text_clicker_edge_mode_desc">Bằng cách chuyển hướng của lần chạm, bạn có thể làm cho nó chạm vào bất kỳ đâu trên màn hình.</string>
    <string name="text_toggle_default_mode">Chuyển sang chế độ mặc định</string>
    <string name="text_close_floating_window">Đóng cửa sổ nổi</string>
    <string name="xpopup_cancel">Cancel</string>
    <string name="xpopup_ok">OK</string>
    <string name="xpopup_save">save</string>
    <string name="xpopup_saved_to_gallery">Saved to album</string>
    <string name="xpopup_image_not_exist">Image not exist</string>
    <string name="xpopup_saved_fail">Image save failed</string>
    <string name="text_edit_target">Chỉnh sửa mục tiêu</string>
    <string name="text_repeat_tilte">Số lần lặp lại</string>
    <string name="text_repeat_desc">Lặp lại hành động này bao nhiêu lần</string>
    <string name="text_times">lần</string>
    <string name="text_swipe_duration">Khoảng thời gian trượt</string>
    <string name="text_swipe_duration_desc">Khoảng thời gian&gt; 300ms</string>
    <string name="text_press_and_hold_duration">Thời lượng nhấn và giữ</string>
    <string name="text_milliseconds">Mili giây</string>
    <string name="text_delete">Xóa</string>
    <string name="text_tab_save">Lưu</string>
    <string name="text_settings">Cài đặt</string>
    <string name="text_instructions">Giới Thiệu</string>
    <string name="text_permissions">Quyền</string>
    <string name="text_tab_home">Trang chủ</string>
    <string name="text_tab_config">Cấu hình</string>
    <string name="text_tab_vip">Cao cấp</string>
    <string name="text_accessibility">Dịch vụ trợ năng</string>
    <string name="text_wsm_acc">Chúng tôi sử dụng Accessibility Services API để triển khai các chức năng chính của ứng dụng</string>
    <string name="text_xy">1. Tại sao sử dụng dịch vụ này?\n Chúng tôi sử dụng phương pháp này để triển khai các chức năng cơ bản như nhấp chuột và tính linh hoạt. \n2. Chúng tôi có phải thu thập dữ liệu riêng tư không? \nChúng tôi sẽ không thu thập bất kỳ dữ liệu cá nhân nào theo cách này. Nếu bạn đồng ý sử dụng chúng, hãy nhấp vào nút chấp nhận và tiếp tục</string>
    <string name="text_disagree">Không đồng ý</string>
    <string name="text_agree">Đồng ý</string>
    <string name="text_go_to_settings">Cài đặt</string>
    <string name="text_default_settings">Cài đặt mặc định</string>
    <string name="text_default_set_desc">Chỉ các cài đặt cấu hình mới tạo mới hợp lệ, các cấu hình đã lưu cần được chỉnh sửa trong menu di chuột.</string>
    <string name="text_accessibility_successfully">Dịch vụ trợ năng đã bắt đầu thành công</string>
    <string name="text_acc_on_desc">Các quyền cần thiết để chạy ứng dụng này.</string>
    <string name="text_desc6">Kích hoạt lại</string>
    <string name="text_wza_tc_desc">Ứng dụng này cần kích hoạt quyền dịch vụ trợ năng trước khi có thể sử dụng bình thường, vui lòng nhấp vào Cài đặt, sau đó tìm ứng dụng này trong danh sách trợ năng hoặc trong các dịch vụ đã tải xuống khác:</string>
    <string name="text_jr_auto_clicker">AutoClick Pro</string>
    <string name="text_jhfw">Kích hoạt dịch vụ</string>
    <string name="text_watch_tutorial">Xem hướng dẫn</string>
    <string name="text_wza_wjh">Dịch vụ trợ năng chưa được kích hoạt</string>
    <string name="text_accessibility_troubleshooting">Nếu ứng dụng không khả dụng, bạn có thể tắt dịch vụ trợ năng và bật lại.\n\nVẫn không hoạt động, hãy tắt các dịch vụ trợ năng, đóng ứng dụng, mở lại ứng dụng, bật lại các dịch vụ trợ năng.\n\nGiải pháp cuối cùng: Tắt các dịch vụ trợ năng và khởi động lại thiết bị.</string>
    <string name="text_battery_optimization">Tối ưu hóa pin</string>
    <string name="text_sd_desc">Tránh bị hệ thống làm sạch.</string>
    <string name="text_zdqd">tự động bắt đầu</string>
    <string name="text_auto_start_on_desc">Tránh bị hệ thống làm sạch khi chạy trong thời gian dài.</string>
    <string name="text_is_this_tutorial_useful_to_you">Hướng dẫn này có hữu ích với bạn không?</string>
    <string name="text_useful">Hữu ích</string>
    <string name="text_useless">Vô dụng</string>
    <string name="text_improve_tutorials">Cải thiện hướng dẫn</string>
    <string name="text_tutorials_desc">Không có ảnh chụp màn hình của kiểu điện thoại của bạn, bạn có thể giúp chúng tôi thêm nó được không?</string>
    <string name="text_upload">Tải lên</string>
    <string name="text_faq1">Trình nhấp chuột tự động thoát bất thường？ Không thể nhấp chuột tự động trong một thời gian dài?</string>
    <string name="text_fqa11">1. Nó có xu hướng bị lỗi khi đặt khoảng thời gian dưới 40 mili giây. Chúng tôi khuyên bạn nên nhấp chuột rất nhanh trong một khoảng thời gian ngắn.</string>
    <string name="text_fqa12">2. Hệ thống sẽ tự động buộc đóng ứng dụng khi mức tiêu thụ điện năng tăng đột ngột. Điều này có thể được giải quyết bằng cách đặt quyền TỰ ĐỘNG BẮT ĐẦU và TỐI ƯU HÓA PIN.</string>
    <string name="text_fqa13">3. Phần trên có thể giải thích 90% các trường hợp thoát ra bất thường, và một số liên quan đến thiết bị và hệ thống cụ thể. Nếu cách trên không giải quyết được sự cố của bạn, bạn có thể khởi động lại ứng dụng.</string>
    <string name="text_fqa2">Trình nhấp chuột tự động thoát tự động? Không hoạt động?</string>
    <string name="text_fqa21">1. Lý do chính cho sự cố này là DỊCH VỤ TRUY CẬP đã bị lỗi. Bạn có thể:</string>
    <string name="text_edit_name">Đổi tên</string>
    <string name="text_backup">Sao chép</string>
    <string name="text_export">Xuất khẩu</string>
    <string name="text_delete_config">Xóa cấu hình này?</string>
    <string name="text_dx_cancel">Hủy</string>
    <string name="text_dx_delete">Xóa</string>
    <string name="text_set_desc">Chọn hành động mặc định sẽ được thực hiện khi mở ứng dụng này</string>
    <string name="text_do_nothing">Không làm gì</string>
    <string name="text_open_single_target_mode">Mở chế độ một mục tiêu</string>
    <string name="text_open_multi_target_mode">Mở chế độ đa mục tiêu</string>
    <string name="text_load_configuration">Tải cấu hình:</string>
    <string name="text_you_have_no_config">Bạn không có cấu hình đã lưu nào để tải</string>
    <string name="less_than_40s">Dưới 40 giây</string>
    <string name="text_jg_desc1">Khoảng thời gian trễ đã đặt giữa các lần nhấp</string>
    <string name="text_jg_desc2">1. Nó có thể khiến thiết bị của bạn bị kẹt hoặc thoát bất thường.</string>
    <string name="text_jg_desc3">2. Điều này có thể khiến thiết bị của bạn không thể kiểm soát được.</string>
    <string name="text_jg_desc4">3. Nếu thiết bị không thể kiểm soát được, hãy nhấn nút nguồn và chương trình sẽ bị chấm dứt.</string>
    <string name="text_confirm">OK</string>
    <string name="text_subscription_notice">Thông báo Đăng ký</string>
    <string name="text_sub_desc1">1. Trong thời gian đăng ký, người dùng được hưởng các dịch vụ VIP, không bao gồm quảng cáo và không hạn chế tính năng.</string>
    <string name="text_sub_desc2">2. Dịch vụ VIP được liên kết với tài khoản Google Play, vì vậy bạn sẽ không cần đăng ký lại khi có thể thay thế điện thoại của mình hoặc cài đặt lại ứng dụng sau khi xóa.</string>
    <string name="text_sub_desc3">3. Sẽ không bị tính phí nếu đăng ký bị hủy trong thời gian dùng thử.</string>
    <string name="text_sub_desc4">4. Theo thông số kỹ thuật của Google Play, nếu bạn không hủy đăng ký của mình trong thời hạn đăng ký, Google Play sẽ tự động gia hạn đăng ký của bạn.</string>
    <string name="text_sub_desc5">5. Nếu bạn muốn hủy đăng ký, bạn có thể thực hiện việc này qua Google Play.</string>
    <string name="text_ok_go">OK, ĐÃ RỒI</string>
</resources>