<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_comment_guide"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="25dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            style="@style/Theme.AutoClick.Text.Roboto.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_subscription_notice"
            android:textColor="@color/font1"
            android:textSize="@dimen/text_size_17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/text_sub_desc1"
            android:textColor="@color/font2"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/text_sub_desc2"
            android:textColor="@color/font2"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/text_sub_desc3"
            android:textColor="@color/font2"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/text_sub_desc4"
            android:textColor="@color/font2"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/text_sub_desc5"
            android:textColor="@color/font2"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tvOk"
            style="@style/Theme.AutoClick.Text.Roboto.Bold"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/text_ok_go"
            android:textAllCaps="true"
            android:textColor="@color/color_2e2ee5"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>
</FrameLayout>
