<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/text_settings"
            android:textColor="@color/font1"
            android:textSize="@dimen/text_size_17"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/text_set_desc"
            android:textColor="@color/font2"
            android:textSize="@dimen/text_size_14" />

        <RadioGroup
            android:id="@+id/rGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <RadioButton
                android:id="@+id/rbDoNothing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text_do_nothing" />

            <RadioButton
                android:id="@+id/rbSingle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/text_open_single_target_mode" />

            <RadioButton
                android:id="@+id/rbMulti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/text_open_multi_target_mode" />

            <RadioButton
                android:id="@+id/rbLoadConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/text_load_configuration" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tvNoConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:text="@string/text_you_have_no_config"
                android:textColor="@color/orange"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spinnerConfigSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/text_cancel"
                android:textAllCaps="true"
                android:textColor="@color/font1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_2e2ee5_radius43"
                android:gravity="center"
                android:minWidth="96dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/text_save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
