<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/bg_ffffff_radius8"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="24dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/text_permissions"
        android:textColor="@color/font1"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_wza_tc_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_line_999999"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_jr_auto_clicker"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="15dp"
            android:background="#f4f4f4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="↑"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/text_jhfw"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_help_outline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/text_watch_tutorial"
            android:textAllCaps="true"
            android:textColor="@color/color_2e2ee5"
            android:textSize="@dimen/text_size_13" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:text="@string/text_go_to_settings"
            android:textAllCaps="true"
            android:textColor="@color/color_2e2ee5"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
