<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_ffffff_radius8"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvEditRename"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:text="@string/text_edit_name"
        android:textAllCaps="true"
        android:textColor="@color/font1"
        android:textSize="@dimen/text_size_14"
        app:drawableStartCompat="@drawable/icon_edit_name" />

    <TextView
        android:id="@+id/tvBackup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:text="@string/text_backup"
        android:textColor="@color/font1"
        android:textSize="@dimen/text_size_14"
        app:drawableStartCompat="@drawable/icon_copy" />

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:text="@string/text_delete"
        android:textColor="@color/font1"
        android:textSize="@dimen/text_size_14"
        app:drawableStartCompat="@drawable/icon_delete" />

    <TextView
        android:id="@+id/tvExport"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:text="@string/text_export"
        android:textAllCaps="true"
        android:textColor="@color/font1"
        android:textSize="@dimen/text_size_14"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/icon_export" />
</LinearLayout>
