<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_ffffff_radius16"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_config"
        android:textColor="@color/font1"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"
            android:text="@string/text_dx_cancel"
            android:textColor="@color/font2"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:gravity="center"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"
            android:text="@string/text_dx_delete"
            android:textColor="@color/color_eb5757"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
